--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Coins to Cashulator</h1>
     
+
     <script src="main.js"></script>
 </body>
 </html>
